sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:19: error: not found: value plusGrand
		if ( plusGrand(i , i+1) == false ) {
                     ^